[package]
name = "luna"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "luna"

[lib]
name = "luna_core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
ansi_term = "0.12"
dotenv = "0.15.0"
tiberius = { version = "0.12.2", features = [
    "vendored-openssl", "tds73", "chrono", "rust_decimal"
], default-features = false }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.31"
surrealdb = { version = "1.2.0", features = ["kv-rocksdb"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
chrono = "0.4"
rust_decimal = "1.34.2"
inquire = "0.6.2"